added swagger for projects route
